WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130140
BundlePageDiagnosticLoggingClient leaks every string passing through it.
https://bugs.webkit.org/show_bug.cgi?id=130140
Summary
BundlePageDiagnosticLoggingClient leaks every string passing through it.
Andreas Kling
Reported
2014-03-12 10:36:14 PDT
<
rdar://problem/15416838
>
Attachments
Patch
(1.65 KB, patch)
2014-03-12 10:45 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch
(1.54 KB, patch)
2014-04-09 23:10 PDT
,
mitz
bfulgham
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-03-12 10:45:48 PDT
Created
attachment 226527
[details]
Patch
Andreas Kling
Comment 2
2014-03-12 11:00:45 PDT
Committed
r165481
: <
http://trac.webkit.org/changeset/165481
>
WebKit Commit Bot
Comment 3
2014-03-12 11:52:49 PDT
Re-opened since this is blocked by
bug 130151
mitz
Comment 4
2014-04-09 23:10:45 PDT
Created
attachment 229023
[details]
Patch
Brent Fulgham
Comment 5
2014-04-10 22:15:28 PDT
Comment on
attachment 229023
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=229023&action=review
r=me.
> Source/WebKit2/ChangeLog:9 > + (WebKit::InjectedBundlePageDiagnosticLoggingClient::logDiagnosticMessage): Donât copy the
Looks like a smart quote got into this ASCII file.
mitz
Comment 6
2014-04-10 22:24:17 PDT
Fixed in <
http://trac.webkit.org/r167113
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug