BundlePageDiagnosticLoggingClient leaks every string passing through it. <https://webkit.org/b/130140> <rdar://problem/15416838>

Use toAPI() instead of toCopiedAPI() so the receiving end doesn't need
to worry about adopting the WKStringRef.

Reviewed by Anders Carlsson.

* WebProcess/InjectedBundle/InjectedBundlePageDiagnosticLoggingClient.cpp:
(WebKit::InjectedBundlePageDiagnosticLoggingClient::logDiagnosticMessage):

Canonical link: https://commits.webkit.org/148092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165481 268f45cc-cd09-0410-ab3c-d52691b4dbfc